--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "massive": "^6.9.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "session": "^0.1.0",
     "web-vitals": "^1.1.2"
