--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-session": "^1.17.2",
     "massive": "^6.9.1",
     "multer": "^1.4.3",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
@@ -28,7 +29,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "scss": "node-sass -watch scss -o css"
   },
   "eslintConfig": {
     "extends": [
